src/client/index.css
html {
  height: 100%;
}

body {
  margin: 0;
  font-family: Roboto;
  height: 100%;
  background-color: rgba(246, 247, 248, 0.5);
}

#root {
  min-height: 100%;
  display: flex;
  flex-direction: column;
}

body.dark-mode {
  background-color: inherit;
}

/* Dark mode semantic-ui components, with styling copied from the default "inverted" components. */
body.dark-mode {
  color: #fff;
}
body.dark-mode .ui.segment {
  background: #1b1c1d;
  color: rgba(255, 255, 255, 0.9);
  border: 1px solid rgba(221, 219, 217, 0.85);
}
body.dark-mode .ui.form .field > label {
  color: rgba(255, 255, 255, 0.9);
}
body.dark-mode .ui.toggle.checkbox input ~ label {
  color: rgba(255, 255, 255, 0.9);
}
body.dark-mode .ui.toggle.checkbox input:checked ~ label {
  color: rgba(255, 255, 255, 0.9) !important;
}

